--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,46 +6,38 @@
 	scroll-behavior: smooth;
 }
 
-/* Grid layout */
 .post__layout {
-	display: grid;
-	grid-template-columns: 1fr 2rem 0rem 2rem 40rem 2rem 0rem 2rem 1fr;
 	width: 100%;
 	& > * {
-		grid-column: 5 / span 1;
+		max-width: 40rem;
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
 
-.default {
-	grid-column: 5 / span 1 !important;
-}
-
-.box {
-	grid-column: 4 / span 3 !important;
-}
-
+.default,
 .wide {
-	grid-column: 5 / span 1 !important;
+	max-width: 40rem !important;
+	margin-top: 1.33333em;
+	margin-bottom: 1.333333em;
 }
 
-.wide-box {
-	grid-column: 4 / span 3 !important;
+.wide-box,
+.box {
+	margin-top: 1.33333em;
+	margin-bottom: 1.333333em;
+	max-width: 44rem !important;
 }
 
+.center-children > *,
 .center-child > *:first-of-type {
 	margin-left: auto !important;
 	margin-right: auto !important;
 	width: auto !important;
 }
 
-.center-children > * {
-	margin-left: auto !important;
-	margin-right: auto !important;
-	width: auto !important;
-}
-
 /* Two column layout */
-
+/* FIX ME! Grid breaks margin collapsing! */
 .two-col {
 	display: grid;
 	grid-template-columns: 1fr 2rem 1fr;
@@ -58,22 +50,22 @@
 }
 
 @screen xl {
-	/* Grid layout */
 	.post__layout {
-		display: grid;
-		grid-template-columns: 1fr 2rem 14rem 2rem 40rem 2rem 14rem 2rem 1fr;
 		width: 100%;
 		& > * {
-			grid-column: 5 / span 1;
+			max-width: 40rem;
 		}
 	}
 
 	.wide {
-		grid-column: 3 / span 5 !important;
+		max-width: 72rem !important;
 	}
+
 	.wide-box {
-		grid-column: 2 / span 7 !important;
+		max-width: 76rem !important;
 	}
+
+	/* FIX ME! Grid breaks margin collapsing! */
 	.two-col {
 		display: grid;
 		grid-template-columns: 1fr 2rem 1fr;
